values and footer

--- a/our-story.html
+++ b/our-story.html
@@ -6,12 +6,21 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+<!-- FontAwesome Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" href="css/styles.css">
     <!-- Own Styles -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<!--Embedeed fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Amplify-Our story</title>
 
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
@@ -75,7 +84,7 @@
       </div>
       <div class="col-lg-4 text-center d-flex align-items-center justify-content-center our-story-heading-text">
         <div>
-          <h1 class="fw-bold our-story-text">All 2gether Now!</h1>
+          <h1 class="fw-bold our-story-text">AMPLIFY!!!</h1>
           <h2 class="fw-bold our-story-text">The online platform for togetherness!</h2>
           <p class="mt-2">
             <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button button-color">Join now!</a>
@@ -143,126 +152,96 @@
         </div>
       </div>
     </div>
-    <div class="bg-dark bg-opacity-10 py-3">
-      <div class="bg-custom-grey">
-        <div class="row justify-content-center text-center g-2 our-story-body-text">
-          <div class="col-12">
-            <h2>Our values</h2>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-danger bg-danger py-4 bg-opacity-25 fs-4">Joy</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-warning bg-warning py-4 bg-opacity-25 fs-4">Quality</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-success bg-custom py-4 bg-opacity-25 fs-4">Inclusivity</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-info bg-info py-4 bg-opacity-25 fs-4">Happiness</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-primary bg-primary py-4 bg-opacity-25 fs-4">Togetherness</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-danger bg-danger py-4 bg-opacity-25 fs-4">Experience</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-warning bg-warning py-4 bg-opacity-25 fs-4">Community</h4>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-success bg-custom py-4 bg-opacity-25 fs-4">Belonging</h4>
-          </div>
+    
+     <!--Popover-->
+     <div class="container">
+      <div class="row justify-content-center text-center g-2 our-story-body-text">
+        <div class="col-12">
+          <h2>Our values</h2>
+      <div class="row">
+        <div class="col-md-3">
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-purple" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
+          data-bs-placement="bottom">Forming connections</button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="btn btn-lg btn-danger w-100" data-bs-toggle="popover" data-bs-content="Laughing until it hurts with your friends, seeing your favorite rock star front row at a concert, saying yes to everything that makes your heart rush, chasing your dreams without stopping at nothing. This is what living life to the fullest means to us. Leave no room for regrets, only unforgettable moments. " 
+          data-bs-placement="bottom">Living life to the fullest </button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-purple" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power.
+          " 
+          data-bs-placement="bottom">Freedom of expression</button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="btn btn-lg btn-danger w-100" data-bs-toggle="popover" title="Popover title" data-bs-content="What is life without those exciting, blood rushing moments? From the first song, the headbanging, the distortion of the guitar live, and the encore. It’s hard to explain with words; it's something to feel and experience. Concerts are what makes music and us come alive. After all, we're all here for a good time, not a long one." 
+          data-bs-placement="bottom">Adrenaline Rush</button>
         </div>
       </div>
     </div>
-
-     <!-- Start of Footer -->
-     <footer class="footer">
-      <div class="container">
-        <div class="row">
-        </div>
       </div>
-      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-          <div class="me-5 d-none d-lg-block">
-              <span><strong>Check out our social media:</strong></span>
-          </div>
-          <div>
-              <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
-                  <i class="fab fa-instagram"></i>
-              </a>
-              <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
-                  <i class="fab fa-github"></i>
-              </a>
-          </div>
-      </section>
-      <section class="">
-          <div class="container text-center text-md-start mt-5">
-              <div class="row mt-3">
-                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                      <i class="fas fa-bolt me-3"></i>AMPLIFY
-                  </h6>
-                  <p>Here we can add some fancy text.</p>
-                  </div>
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                      <h6 class="text-uppercase fw-bold mb-4">
-                          Content
-                      </h6>
-                      <p>
-                        <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
-                      </p>
-                      <p>
-                        <a class="footer-a" href="corporate.html">Corporate</a>
-                      </p>
-                  </div>
-                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Contact
-                    </h6>
-                    <p><i class="fas fa-home me-3"></i> The Netherlands, Breda</p>
-                    <p style="display: flex; align-items: center;">
-                        <i class="fas fa-envelope me-3"></i>
-                        <span>amplify.branddevelopment@gmail.com</span>
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> + 31 224 577 98</p>
-                </div>
-                
+     </div>
+    <!--End of Popover-->
+
+    <div class="container-before-footer">
+    </div>
+<!-- Start of Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+    </div>
+  </div>
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <div class="me-5 d-none d-lg-block footer-item footer-text">
+          <span><strong>Check out our social media:</strong></span>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
+            <i class="fab fa-github"></i>
+        </a>
+      </div>            
+  </section>
+  <section class="">
+      <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold mb-4 footer-text">
+                  <i class="fas fa-bolt me-3"></i>AMPLIFY
+              </h6>
+              <p class="footer-item footer-text">Here we can add some fancy text.</p>
               </div>
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
+                <h6 class="text-uppercase fw-bold mb-4 footer-text">
+                    Content
+                </h6>
+                <p>
+                  <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
+                </p>
+                <p>
+                  <a class="footer-a" href="corporate.html">Corporate</a>
+                </p>
+              </div>                    
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
+                    Contact
+                </h6>
+                <p class="footer-text"><i class="fas fa-home me-3 footer-item"></i> The Netherlands, Breda</p>
+               <div class="d-flex justify-content-center align-items-center">
+               <i class="fas fa-envelope me-3 footer-item"></i>
+               <span class="footer-text">amplify.branddevelopment@gmail.com</span>
+               </div>
+               <br>
+               <p class="footer-text"><i class="fas fa-phone me-3 footer-item"></i> + 31 224 577 98</p>
+               </div>
           </div>
-      </section>
-  </footer>
-  <!-- End of Footer -->
- <!-- Bootstrap Bundle with Popper -->
+      </div>
+  </section>
+</footer>
+<!-- End of Footer -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="javascript.js"></script>
-
-<!-- Custom Script to synchronize carousels -->
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    var carouselLeftElement = document.querySelector('#carouselLeft');
-    var carouselRightElement = document.querySelector('#carouselRight');
-
-    var carouselLeft = new bootstrap.Carousel(carouselLeftElement, {
-        interval: false, // Oprim autoplay pentru ambele carusele
-        wrap: true
-    });
-    var carouselRight = new bootstrap.Carousel(carouselRightElement, {
-        interval: false, // Oprim autoplay pentru ambele carusele
-        wrap: true
-    });
-
-    // Funcție care avansează ambele carusele la următorul slide
-    function advanceCarousels() {
-        carouselLeft.next(); // Avansează caruselul din stânga
-        carouselRight.next(); // Avansează caruselul din dreapta
-    }
-
-    // Setăm un interval pentru a avansa ambele carusele simultan la fiecare 6 secunde
-    setInterval(advanceCarousels, 6000);
-});
-
-
-</script>
   </body>
 </html>
