--- a/index.html
+++ b/index.html
@@ -90,75 +90,65 @@
       </div>
     </div>
 
-    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Popover title" data-bs-content="Acesta este conținutul popover-ului." data-bs-placement="right">
-      Apasă pentru popover
-    </button>
-    
+   
     <!--End of the content-->
-       <!-- Start of Footer -->
-       <footer class="footer">
-        <div class="container">
-          <div class="row">
+<!-- Start of Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+    </div>
+  </div>
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <div class="me-5 d-none d-lg-block footer-item footer-text">
+          <span><strong>Check out our social media:</strong></span>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
+            <i class="fab fa-github"></i>
+        </a>
+      </div>            
+  </section>
+  <section class="">
+      <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <h6 class="text-uppercase fw-bold mb-4 footer-text">
+                  <i class="fas fa-bolt me-3"></i>AMPLIFY
+              </h6>
+              <p class="footer-item footer-text">Here we can add some fancy text.</p>
+              </div>
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
+                <h6 class="text-uppercase fw-bold mb-4 footer-text">
+                    Content
+                </h6>
+                <p>
+                  <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
+                </p>
+                <p>
+                  <a class="footer-a" href="corporate.html">Corporate</a>
+                </p>
+              </div>                    
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
+                    Contact
+                </h6>
+                <p class="footer-text"><i class="fas fa-home me-3 footer-item footer-text"></i> The Netherlands, Breda</p>
+               <div class="d-flex justify-content-center align-items-center">
+               <i class="fas fa-envelope me-3 footer-item"></i>
+               <span class="footer-text">amplify.branddevelopment@gmail.com</span>
+               </div>
+               <br>
+               <p class="footer-text"><i class="fas fa-phone me-3 footer-item"></i> + 31 224 577 98</p>
+               </div>
           </div>
-        </div>
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <div class="me-5 d-none d-lg-block footer-item">
-                <span><strong>Check out our social media:</strong></span>
-            </div>
-            <div class="social-icons">
-              <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
-                  <i class="fab fa-instagram"></i>
-              </a>
-              <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
-                  <i class="fab fa-github"></i>
-              </a>
-            </div>            
-        </section>
-        <section class="">
-            <div class="container text-center text-md-start mt-5">
-                <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                      <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-bolt me-3"></i>AMPLIFY
-                    </h6>
-                    <p class="footer-item">Here we can add some fancy text.</p>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
-                      <h6 class="text-uppercase fw-bold mb-4 footer-text">
-                          Content
-                      </h6>
-                      <p>
-                        <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
-                      </p>
-                      <p>
-                        <a class="footer-a" href="corporate.html">Corporate</a>
-                      </p>
-                    </div>                    
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                      <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
-                          Contact
-                      </h6>
-                      <p class="footer-text"><i class="fas fa-home me-3 footer-item"></i> The Netherlands, Breda</p>
-                     <div class="d-flex justify-content-center align-items-center">
-                     <i class="fas fa-envelope me-3 footer-item"></i>
-                     <span class="footer-text">amplify.branddevelopment@gmail.com</span>
-                     </div>
-                     <br>
-                     <p class="footer-text"><i class="fas fa-phone me-3 footer-item"></i> + 31 224 577 98</p>
-                     </div>
-                </div>
-            </div>
-        </section>
-    </footer>
-    <!-- End of Footer -->
+      </div>
+  </section>
+</footer>
+<!-- End of Footer -->
 
   </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-    return new bootstrap.Popover(popoverTriggerEl)
-  })
-</script>
 </body>
 </html>
