--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
     <!--Embedeed fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <title>AMPLIFY website</title>
+
+<title>AMPLIFY website</title>
 </head> 
 <body class="background">
   <div class="content">
     <video autoplay loop muted class="video-background">
       <source src="https://www.shutterstock.com/shutterstock/videos/1058308921/preview/stock-footage-person-is-making-a-heart-sign-gesture-and-holding-hands-up-at-a-performance-rock-band-playing-a.webm" type="video/mp4">
-      <!-- Poți adăuga și alte surse pentru compatibilitate cross-browser -->
-      Your browser does not support the video tag.
     </video>
    <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
    <nav class="navbar navbar-expand-lg navbar-light">
