--- a/our-story.html
+++ b/our-story.html
@@ -21,7 +21,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <title>Amplify-Our story</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+<title>Amplify-Our story</title>
 
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
 
@@ -145,9 +153,9 @@
     <div class="bg-custom-grey">
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
-          <h2>Our vision</h2>
-          <p>
-            At 2gether, we envision a world where diversity thrives, and connections are boundless. Our online platform is a vibrant space where individuals from all walks of life unite to discover, share, and fulfil their unique needs and aspirations. We are dedicated to fostering a sense of belonging, breaking down barriers, and creating a global community where every person can find what they seek, creating meaningful connections that transcend boundaries. 2gether is more than just a platform; it's a celebration of the richness that comes from bringing people together, empowering them to explore, connect, and build a future where unity knows no limits.
+          <h2 class="vision-title">Our vision</h2>
+          <p class="vision-text">
+            In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.
           </p>
         </div>
       </div>
