margins our story page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-12 col-md-8 text-center">
         <div class="h-100 d-flex flex-column justify-content-center align-items-center">
           <img class="img-fluid mb-4" src="images/logo.svg" alt="Logo"> 
-            <h1 class="coming-italic mb-2" style="margin-bottom: 20px;">Coming soon...</h1>
+            <h1 class="coming-italic mb-2">Coming soon...</h1>
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
             </div>
@@ -93,6 +93,8 @@
       </div>
     </div>
 
+    <div class="black-bg-container">    
+    </div>
    
     <!--End of the content-->
 <!-- Start of Footer -->
