--- a/our-story.html
+++ b/our-story.html
@@ -83,7 +83,7 @@
       <div class="row bg-custom-purple bg-opacity-25">
 
      <!-- Full height hero section -->
-  <div class="container-fluid p-0">
+  <div class="container-first p-0">
     <div class="row full-height align-items-center m-0">
       <div class="col-lg-8 p-0">
         <video autoplay loop muted class="video-full-height">
@@ -95,8 +95,11 @@
           <h1 class="fw-bold our-story-text">AMPLIFY!!!</h1>
           <h2 class="fw-bold our-story-text">The online platform for togetherness!</h2>
           <p class="mt-2">
-            <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button button-color">Join now!</a>
+            <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Join now!</a>
           </p>
+          <div class="scroll-down">
+          <h3>Scroll down to meet our team!</h3>
+        </div>
         </div>
       </div>
     </div>
@@ -129,7 +132,7 @@
       </div>
       <!-- Carousel Right -->
       <div class="col-md-6">
-          <div id="carouselRight" class="carousel slide" data-bs-interval="6000">
+          <div id="carouselRight" class="carousel-slide" data-bs-interval="6000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
                       <img src="images/about-us.jpg" class="d-block w-100" alt="Slide 1 Right">
@@ -159,8 +162,7 @@
           </p>
         </div>
       </div>
-    </div>
-    
+    </div>  
      <!--Popover-->
      <div class="container">
       <div class="row justify-content-center text-center g-2 our-story-body-text">
