--- a/our-story.html
+++ b/our-story.html
@@ -153,6 +153,7 @@
 </div>
 <!-- End of carousels -->
 
+<div class="container"> 
     <div class="bg-custom-grey">
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
@@ -163,14 +164,16 @@
         </div>
       </div>
     </div>  
+  </div>
      <!--Popover-->
      <div class="container">
       <div class="row justify-content-center text-center g-2 our-story-body-text">
         <div class="col-12">
           <h2 class="our-values-title">Our values</h2>
+          <div class="click-buttons">Click on the buttons to find out more!</div>
       <div class="row">
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-purple" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
           data-bs-placement="bottom">Forming connections</button>
         </div>
         <div class="col-md-3">
@@ -178,8 +181,7 @@
           data-bs-placement="bottom">Living life to the fullest </button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-purple" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power.
-          " 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power." 
           data-bs-placement="bottom">Freedom of expression</button>
         </div>
         <div class="col-md-3">
