--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
           <div class="col-12 col-md-8 text-center">
         <div class="h-100 d-flex flex-column justify-content-center align-items-center">
           <img class="img-fluid mb-4" src="images/logo.svg" alt="Logo"> 
-            <h1 class="coming-italic mb-2">Coming soon...</h1>
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
             </div>
+            <a href="#bg-section" class="btn btn-primary">Go to the feature</a>
             <progress id="progress-bar" aria-label="Content loading…"></progress>  
             <br>
             <br>
@@ -93,7 +93,9 @@
       </div>
     </div>
 
-    <div class="black-bg-container">    
+  
+<!--Start of our Features-->
+    <div class="bg-container" id="bg-section">    
     </div>
    
     <!--End of the content-->
