--- a/our-story.html
+++ b/our-story.html
@@ -107,6 +107,21 @@
       </div>
     </div>
 
+    <!--Start of our Vision-->
+<div class="container-our-vision"> 
+  <div class="bg-custom-grey">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
+        <h2 class="vision-title">Our vision</h2>
+        <p class="vision-text">
+          In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.
+        </p>
+      </div>
+    </div>
+  </div>  
+</div>
+<!--End of our Vision-->
+
    <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
 <!-- Start of carousels -->
 <div class="container-fluid">
@@ -153,18 +168,6 @@
 </div>
 <!-- End of carousels -->
 
-<div class="container"> 
-    <div class="bg-custom-grey">
-      <div class="row justify-content-center">
-        <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
-          <h2 class="vision-title">Our vision</h2>
-          <p class="vision-text">
-            In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.
-          </p>
-        </div>
-      </div>
-    </div>  
-  </div>
      <!--Popover-->
      <div class="container">
       <div class="row justify-content-center text-center g-2 our-story-body-text">
@@ -185,7 +188,7 @@
           data-bs-placement="bottom">Freedom of expression</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" title="Popover title" data-bs-content="What is life without those exciting, blood rushing moments? From the first song, the headbanging, the distortion of the guitar live, and the encore. It’s hard to explain with words; it's something to feel and experience. Concerts are what makes music and us come alive. After all, we're all here for a good time, not a long one." 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What is life without those exciting, blood rushing moments? From the first song, the headbanging, the distortion of the guitar live, and the encore. It’s hard to explain with words; it's something to feel and experience. Concerts are what makes music and us come alive. After all, we're all here for a good time, not a long one." 
           data-bs-placement="bottom">Adrenaline Rush</button>
         </div>
       </div>
