--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+<title>Amplify-Our story</title>
 
 <title>AMPLIFY website</title>
 </head> 
@@ -142,7 +147,7 @@
                 <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
                     Contact
                 </h6>
-                <p class="footer-text"><i class="fas fa-home me-3 footer-item footer-text"></i> The Netherlands, Breda</p>
+                <p class="footer-text"><i class="fas fa-home me-3 footer-item"></i> The Netherlands, Breda</p>
                <div class="d-flex justify-content-center align-items-center">
                <i class="fas fa-envelope me-3 footer-item"></i>
                <span class="footer-text">amplify.branddevelopment@gmail.com</span>
