--- a/our-story.html
+++ b/our-story.html
@@ -24,7 +24,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -90,10 +90,10 @@
           <source src="images/animation.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="col-lg-4 text-center d-flex align-items-center justify-content-center our-story-heading-text">
+      <div class="col-lg-4 text-center d-flex align-items-center justify-content-center">
         <div>
-          <h1 class="fw-bold our-story-text">AMPLIFY!!!</h1>
-          <h2 class="fw-bold our-story-text">The online platform for togetherness!</h2>
+          <h1 class="fw-bold our-story-text-heading">Amplify</h1>
+          <h2 class="our-story-text-body">The online platform for togetherness!</h2>
           <p class="mt-2">
             <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button">Join now!</a>
           </p>
@@ -128,7 +128,7 @@
   <div class="row">
       <!-- Carousel Left -->
       <div class="col-md-6">
-          <div id="carouselLeft" class="carousel slide" data-bs-interval="6000">
+          <div id="carouselLeft" class="carousel-slide" data-bs-interval="6000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
                       <img src="images/caroll.jpg" class="d-block w-100" alt="Slide 1 Left">
